# project_bank_network

./: AccountOpening.cpp  AccountOpening.h  README.md  Registration.cpp  Registration.h  SQLStatement.cpp  SQLStatement.h  bank_transfer.cpp  bank_transfer.h  main.cpp  test.db
sqlbd/: CMakeLists.txt  Dockerfile  build.sh  clean.sh  main.cpp  minimal_requirements_ubuntu.sh  run.sh  sfml_compile_requirements_ubuntu.sh  test.sh
sqlbd/header/: AccountOpening.h  InputOutputData.h  Registration.h  SQLStatement.h  SQLconst.h  StateClient.h  bank_transfer.h  create_data_base.h
sqlbd/libraries/: CMakeLists.txt
sqlbd/src/: AccountOpening.cpp  CMakeLists.txt  Registration.cpp  SQLStatement.cpp  StateClient.cpp  bank_transfer.cpp  create_data_base.cpp
sqlbd/tests/: CMakeLists.txt  TestCollision.cpp
